--- a/InfraStructure/src/main/resources/application.yml
+++ b/InfraStructure/src/main/resources/application.yml
@@ -1,1 +1,12 @@
-
+spring:
+   datasource:
+      url: jdbc:h2:mem:userdb
+      driverClassName: org.h2.Driver
+      username: sa
+      password:
+   h2:
+      console:
+         enabled: true
+   jpa:
+      hibernate:
+         dll-auto: update
