--- a/InfraStructure/build.gradle
+++ b/InfraStructure/build.gradle
@@ -31,6 +31,8 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.0-RC1'
+	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.11.2'
+	testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '3.11.2'
 }
 
 test {
