--- a/InfraStructure/src/main/resources/application.yml
+++ b/InfraStructure/src/main/resources/application.yml
@@ -1,12 +1,13 @@
 spring:
    datasource:
-      url: jdbc:h2:mem:userdb
+#      url: jdbc:h2:mem:userdb
+      url: jdbc:mysql://infra-db.c3k0l9jdcfan.ap-northeast-2.rds.amazonaws.com:3306/infra
       driverClassName: org.h2.Driver
-      username: sa
-      password:
-   h2:
-      console:
-         enabled: true
+      username: lsjc12911
+      password: jason272k
+#   h2:
+#      console:
+#         enabled: true
    jpa:
       hibernate:
          dll-auto: update
