--- a/InfraStructure/src/main/resources/application.yml
+++ b/InfraStructure/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
    datasource:
 #      url: jdbc:h2:mem:userdb
       url: jdbc:mysql://infra-db.c3k0l9jdcfan.ap-northeast-2.rds.amazonaws.com:3306/infra
-      driverClassName: org.h2.Driver
+#      driverClassName: org.h2.Driver
       username: lsjc12911
       password: jason272k
 #   h2:
